fix for tsml small tags being too dark: color them orange, why not

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -330,3 +330,6 @@ main#fp-main > div.fp-grid {
     }
   }
 }
+#tsml #meetings table tbody tr td.name small {
+  color: orange;
+}
